--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 html
   head
     title WebGL Edge Detection
+    link(rel="stylesheet" href="/styles.css")
   body
     .container
       canvas(id="canvas" width="500" height="500")
