calculating intensity gradients, modularizing adding attributes to shaders

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,5 @@ html
   body
     .container
       canvas(id="canvas" width="500" height="500")
-    img(id="test-image" src="/mountain-range.jpg" style="display:none;")
+    img(id="test-image" src="/puppy.jpg" style="display:none;")
     script(src="/dist/bundle.js" type="text/javascript")
