--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,6 @@ html
     link(rel="stylesheet" href="/styles.css")
   body
     .container
-      canvas(id="canvas" width="500" height="500")
-    img(id="test-image" src="/mountain-range.jpg" style="display:none;")
+      canvas(id="canvas" width="512" height="512")
+    img(id="test-image" src="/puppy.jpg" style="display:none;")
     script(src="/dist/bundle.js" type="text/javascript")
