--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,16 @@ html
   body
     .container
       canvas(id="canvas" width="512" height="512")
-      .image-upload
-        input#file-input(type="file")
-        button#upload-image-button Upload Image
+      .controller
+        .image-upload
+          input#file-input(type="file")
+          button#upload-image-button Upload Image
+          .error-text
+            #error-text
+        .threshold-sliders
+          #strong-threshold-label Strong edge threshold: 80
+          input#strong-threshold-slider(type="range" value="80" min="1" max="200")
+          #weak-threshold-label Weak edge threshold: 30
+          input#weak-threshold-slider(type="range" value="80" min="1" max="80")
     img#test-image(src="/puppy.jpg")
     script(src="/dist/bundle.js" type="text/javascript")
