--- a/views/index.pug
+++ b/views/index.pug
@@ -8,15 +8,18 @@ html
     .container
       canvas(id="canvas" width="512" height="512")
       .controller
-        .image-upload
+        .image-upload#image-upload
           input#file-input(type="file")
           button#upload-image-button Upload Image
-          .error-text
-            #error-text
         .threshold-sliders
           #strong-threshold-label Strong edge threshold: 80
           input#strong-threshold-slider(type="range" value="80" min="1" max="200")
           #weak-threshold-label Weak edge threshold: 30
           input#weak-threshold-slider(type="range" value="80" min="1" max="80")
-    img#test-image(src="/puppy.jpg")
+        div
+          button#toggle-video Use webcam
+        .error-text
+          #error-text
+    img#image(src="/puppy.jpg")
+    video#video(autoplay="true" width="512" height="512")
     script(src="/dist/bundle.js" type="text/javascript")
