--- a/views/index.pug
+++ b/views/index.pug
@@ -18,6 +18,9 @@ html
           input#weak-threshold-slider(type="range" value="80" min="1" max="80")
         div
           button#toggle-video Use webcam
+        div
+          input#toggle-edge-detection(type="checkbox" checked="true")
+          | &nbsp;Detect edges
         .error-text
           #error-text
     img#image(src="/puppy.jpg")
